chromeos: Makes WindowTreeClient install PlatformEventSource

This only works for Ozone and is necessary for both
UserActivityDetector and remoting. Long term we need to rewrite both
of these to use something else, but for now this accomplishes what
they need.

BUG=822577
TEST=covered by tests

Change-Id: I432cbdcce17bb199bf8bb0f00ec51de81d3c71f0
Reviewed-on: https://chromium-review.googlesource.com/967447
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544063}
Former-commit-id: f1f2c1882604d36eaa85e5a169fef069ad1a062b